[tool.poetry]
name = "llmguard-st"
version = "0.1.0"
description = ""
authors = ["cloud-ray <ray@cybersavvy.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
llm-guard = "^0.3.9"
google-generativeai = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
